fix: 0.3s opacity transition is too long

--- a/assets/sass/shared.scss
+++ b/assets/sass/shared.scss
@@ -60,7 +60,6 @@ html {
   &.wf-active,
   &.wf-inactive {
     opacity: 1;
-    transition: opacity 0.3s ease;
   }
 }
 
